--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.cloudstate.samples.spring.shoppingcart</groupId>
-    <artifactId>cloudstate-samples-spring-shoppingcart</artifactId>
+    <groupId>spring.wirelessmesh</groupId>
+    <artifactId>spring-wirelessmesh</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.6.RELEASE</version>
+        <relativePath />
+    </parent>
+
     <modules>
-        <module>presence</module>
+        <module>wirelessmesh-domain</module>
     </modules>
 
     <build>
