--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>spring.wirelessmesh</groupId>
-    <artifactId>spring-wirelessmesh</artifactId>
+    <groupId>cloudstate.spring.wirelessmesh</groupId>
+    <artifactId>cloudstate-spring-wirelessmesh</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
@@ -17,7 +17,7 @@
     </parent>
 
     <modules>
-        <module>wirelessmesh-domain</module>
+        <module>wirelessmesh</module>
     </modules>
 
     <build>
